# wireguard-web

./: .buildinfo  .env.example  .flake8  .gitignore  Pipfile  Readme.md  db.sqlite3  genindex.html  index.html  manage.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup_wireguard_web.sh  shell.nix  uninstall_wireguard_web.sh  update_config.sh  wireguard_web_ui.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/config/: clients.doctree  p2p.doctree  servers.doctree  users.doctree
.doctrees/setup/: cloud-init.doctree  containers.doctree  direct.doctree  install.doctree
.github/workflows/: build_docs.yaml
_sources/: index.rst.txt
_sources/config/: clients.rst.txt  p2p.rst.txt  servers.rst.txt
_sources/setup/: containers.rst.txt  install.rst.txt
config/: clients.html  p2p.html  servers.html  users.html
doc/: conf.py  index.rst  requirements.txt
doc/config/: clients.rst  p2p.rst  servers.rst  users.rst
doc/setup/: cloud-init.rst  direct.rst
setup/: cloud-init.html  containers.html  direct.html  install.html
systemd/: wireguard-web-config.path  wireguard-web-config.service  wireguard-web-dnsmasq@.service  wireguard-web-ui.service  wireguard-web-wg-quick@.service
wireguard/: apps.py  signals.py  urls.py  utils.py
wireguard/admin/: __init__.py  client.py  server.py  user.py
wireguard/config_generators/: dnsmasq.py  netctl.py  networkmanager.py  systemd.py  wgquick.py
wireguard/management/commands/: create_groups.py
wireguard/middleware/: __init__.py  version.py
wireguard/migrations/: 0001_initial.py  0002_wireguardserver_enabled.py  0003_passwordreset.py  0004_alter_wireguardclient_unique_together.py  0005_alter_wireguardclient_options_and_more.py  0006_serveraccess.py  0007_alter_serveraccess_server.py  0007_wireguardclient_allow_direct_peering_and_more.py  0008_remove_wireguardclient_preshared_key_and_more.py  0009_wireguardclient_public_key.py  0010_public_key_datamigration.py  0011_alter_wireguardclient_public_key.py
wireguard/models/: __init__.py  client.py  invited_users.py  server.py  signals.py  user.py
wireguard/models/client/: __init__.py  client.py  ip.py  local_network.py  network.py
wireguard/models/server/: __init__.py  dns.py  network.py  registration.py  server.py
wireguard/static/: manifest.webmanifest
wireguard/static/css/: material-icons-round.css  site.css
wireguard/templates/wireguard/: base.html  config_mail.txt  device_delete.html  device_detail.html  device_list.html  home.html  invite.html  invite_mail.txt  login.html  logout.html  nav.html  register.html  reset_password.html  reset_password_mail.txt  send_config.html  server_detail.html  server_list.html  welcome_mail.txt
wireguard/templatetags/: relativetime.py
wireguard/views/: __init__.py  client.py  home.py  login.py  p2p.py  server.py
wireguard/views/client/: __init__.py  client.py  config.py
wireguard/views/user_mgmt/: __init__.py  invite.py  login.py  register.py  reset.py  utils.py
wireguard_web/: asgi.py  settings.py  urls.py  wsgi.py
