
[project]
name = "wireguard-web"
description = "Webinterface to configure a wireguard server"
readme = "README.md"
keywords = ["django", "wireguard"]
license = {text = "AGPL"}
classifiers = [
    "License :: OSI Approved :: AGPL License",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Linux",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.1",
    "qrcode>=7.4",
    "Pillow>=9.5",
    "whitenoise>=6.4",
    "humanize>=4.6",
    "dateparser>=1.1",
]
authors = [{name = "Johannes Schriewer", email = "hallo@dunkelstern.de"}]

[project.urls]
Home = "https://github.com/dunkelstern/wireguard-web"


# define the module to package since it is named differently
[tool.flit.module]
name = "wireguard-web"

#[tool.flit.sdist]
#include = ["doc/"]
#exclude = ["doc/*.html"]

#[tool.flit.external-data]
#directory = "data"

[tool.black]
target-version = ['py310']
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "wireguard-web"
lines_after_imports = 2

[tool.poetry]
name = "wireguard-web"
version = "0.6.0"
description = "Webinterface to configure a wireguard server"
authors = ["Johannes Schriewer <hallo@dunkelstern.de>"]
license = "AGPL"
readme = "Readme.md"
packages = [{include = "wireguard_web"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.1"
qrcode = ">=7.4"
pillow = ">=9.5"
whitenoise = ">=6.4"
humanize = ">=4.6"
dateparser = ">=1.1"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
